w00t        2006/04/14 09:03:55 UTC	(20060414-5069)
  Log:
  Let's redo regex again. Compiling the same regex every regex_match() for 4k users would be unacceptable, for example...

  Changes:	Modified:
  +3 -1		trunk/include/extern.h (File Modified) 
  +43 -18	trunk/src/function.c (File Modified) 


w00t        2006/04/14 08:44:09 UTC	(20060414-5067)
  Log:
  Change of my email address

  Changes:	Modified:
  +1 -1		trunk/src/version.sh (File Modified) 


w00t        2006/04/14 03:55:44 UTC	(20060414-5065)
  Log:
  Once again compile cleanly under strict cflags

  Changes:	Modified:
  +1 -2		trunk/src/atheme.c (File Modified) 
  +0 -1		trunk/src/conf.c (File Modified) 
  +0 -8		trunk/src/function.c (File Modified) 
  +4 -5		trunk/src/node.c (File Modified) 
  +0 -1		trunk/src/packet.c (File Modified) 
  +1 -1		trunk/src/send.c (File Modified) 
  +0 -1		trunk/src/services.c (File Modified) 
  +1 -1		trunk/src/xmlrpc.c (File Modified) 


w00t        2006/04/14 03:35:23 UTC	(20060414-5063)
  Log:
  Helps to have the true and false in the right place

  Changes:	Modified:
  +1 -1		trunk/src/function.c (File Modified) 


w00t        2006/04/14 03:10:51 UTC	(20060414-5061)
  Log:
  ...

  Changes:	Modified:
  +1 -1		trunk/include/extern.h (File Modified) 
  +2 -2		trunk/src/function.c (File Modified) 


w00t        2006/04/14 02:46:38 UTC	(20060414-5059)
  Log:
  Perhaps fix the crash in regex_match? Who knows...

  Changes:	Modified:
  +7 -11	trunk/src/function.c (File Modified) 


w00t        2006/04/14 01:41:51 UTC	(20060414-5057)
  Log:
  regex_match(): bail on NULL arguments, don't crash. there's a good puppy.

  Changes:	Modified:
  +6 -0		trunk/src/function.c (File Modified) 


w00t        2006/04/14 01:15:06 UTC	(20060414-5055)
  Log:
  Rework of regex_match to not be so .. interesting. Needed for barafranca bits and pieces.

  Changes:	Modified:
  +1 -2		trunk/include/extern.h (File Modified) 
  +20 -8	trunk/src/function.c (File Modified) 

