@@ -4,7 +4,7 @@
  *
  * This file contains code for the CService REGISTER function.
  *
- * $Id: register.c 4613 2006-01-19 23:52:30Z jilles $
+ * $Id: register.c 5073 2006-04-14 11:16:18Z w00t $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"chanserv/register", FALSE, _modinit, _moddeinit,
-	"$Id: register.c 4613 2006-01-19 23:52:30Z jilles $",
+	"$Id: register.c 5073 2006-04-14 11:16:18Z w00t $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -44,7 +44,6 @@ static void cs_cmd_register(char *origin)
 	user_t *u = user_find_named(origin);
 	channel_t *c;
 	chanuser_t *cu;
-	myuser_t *mu, *tmu;
 	mychan_t *mc, *tmc;
 	node_t *n;
 	char *name = strtok(NULL, " ");
